--- a/src/app/shared/components/page-items-dropdown/page-items-dropdown.component.html
+++ b/src/app/shared/components/page-items-dropdown/page-items-dropdown.component.html
@@ -1,9 +1,19 @@
 <div class="show-filter">
   {{'Showing' | translate}} <span>1</span> {{'to' | translate}}
-  <div class="dropdown" #dropdown (click)="toggleDropdown()">
+  <div
+    class="dropdown"
+    #dropdown
+    (click)="toggleDropdown()"
+  >
     <div class="dropdown__btn">{{countPerPage}}</div>
-    <ul class="dropdown__list" (click)="onChangeItemsPerPage($event)">
-      <li class="dropdown__item" *ngFor="let item of (pageCountsConfig || defaultPageCountsConfig)">{{item}}</li>
+    <ul
+      class="dropdown__list"
+      (click)="onChangeItemsPerPage($event)"
+    >
+      <li
+        class="dropdown__item"
+        *ngFor="let item of (pageCountsConfig || defaultPageCountsConfig)"
+      >{{item}}</li>
     </ul>
   </div>
   {{'of' | translate}} <span>{{countOfEntries}}</span> {{'entries' | translate}}.
