--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -113,7 +113,7 @@
       <button class="btn btn--active balance__title-btn" (click)="openRefillBalancePopup(true)">
         {{'Refill balance' | translate}}
       </button>
-      <button class="btn btn--empty-blue balance__title-btn" style="margin-left: 32px;" (click)="openSendMoneyPopup(true)">
+      <button class="btn balance__title-btn" style="margin-left: 32px;" (click)="openSendMoneyPopup(true)">
         {{'Send money' | translate}}
       </button>
     </div>
