--- a/src/app/funds/balance/refill-money/refill-step-one/refill-step-one.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-one/refill-step-one.component.html
@@ -1,12 +1,12 @@
-<div class="refil-s1">
-  <div class="title modal__title">
+<div class="refil-s1 side-popups">
+  <h2 class="title modal__title">
     {{'Refill balance' | translate}}
-  </div>
-  <div class="subtitle modal__subtitle">
+  </h2>
+  <h3 class="subtitle modal__subtitle">
     <p>
       {{'How would you like to refill the balance?' | translate}}
     </p>
-  </div>
+  </h3>
   <button class="btn btn--center btn--empty-blue"
   (click)="onChooseRefill(CRYPTO_DEPOSIT)">
   {{'Crypto deposit' | translate}}
