--- a/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.scss
@@ -1,81 +1,17 @@
-.refill {
-  &__title{
-    text-align: center;
-    margin-bottom: 16px;
-  }
-  &__subtitle{
-    text-align: center;
-    margin-bottom: 32px;
-  }
-  &__wrap-input {
-    width: 100%;
-    max-width: 230px;
-    margin: 0 auto 32px;
-  }
-  &__transfer-message{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 24px 0 0;
-  }
-  &__transfer-message-icon{
-    width: 45px;
-    height: 45px;
-    margin-right: 16px;
-    svg{
-      width: 100%;
-      height: 100%;
-    }
-  }
-  &__transfer-message-text{
-    h6{
-      font-size: 18px;
-      margin-bottom: 4px;
-    }
-  }
+.side-popups h3{
+      margin-bottom: 29px;
 }
 
-@media (min-width: 1200px) {
-  .refill {
-    &__transfer-message{
-      margin: 32px 0 0;
-    }
-    &__transfer-message-icon{
-      width: 60px;
-      height: 60px;
-    }
-  }
+.side-popups h2{
+      margin-bottom: 14px;
 }
 
-// --------------
-.btn-active {
-  background-color: #237BEF;
-  color: #fff;
+.side-popups form{
+      margin-bottom: 34px;
 }
 
-// TEMP STYLE
-.input-hint-wrapper {
-  opacity: 1;
-  .wrap-input__message{
-    color: #EB5757;
-  }
-}
-
-.btn--empty-blue{
-  &:hover, &:focus{
-    background-color: transparent !important;
-  }
-}
-
-.btn {
-  &.btn--center {
-    color: #ffffff !important;
-    &.btn--empty-blue {
-      color: #237BEF !important;
-      &:hover {
-        background-color: transparent !important;
-        border: 1px solid #237BEF !important;
-      }
-    }
+.refill__wrap-input{
+  @media(max-width: 1199px){
+    max-width: 270px;
   }
 }
