--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups send-email-s3">
-<div class="title send__title">{{'Make Inner transfer by email protected by code' | translate}}</div>
+<h2 class="title send__title">{{'Make Inner transfer by email protected by code' | translate}}</h2>
 <div class="formWraper" *ngIf="isEnterData">
-  <div class="subtitle send__subtitle">{{' the code will be sent to you after transaction verification ' | translate}}</div>
+  <h3 class="subtitle send__subtitle">{{' the code will be sent to you after transaction verification ' | translate}}</h3>
   <form [formGroup]="form">
     <div class="send__inputs-wrap">
       <div class="select send__select send__select--custom">
@@ -138,7 +138,7 @@
   </div>
   <button
     class="btn btn--center"
-    [ngClass]="{'btn--empty-blue': !form.valid || pendingCheckEmail}"
+    [disabled]="!form.valid || pendingCheckEmail"
     (click)="submitTransfer()"
   >
     {{'Create code' | translate}}
