--- a/src/app/funds/balance/refill-money/refill-step-one/refill-step-one.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-one/refill-step-one.component.scss
@@ -1,8 +1,3 @@
-.btn{
-  margin-bottom: 24px;
-}
-@media (min-width:1200px){
-  .btn{
-    margin-bottom: 32px;
-  }
+.side-popups h2{
+	margin-bottom: 14px;
 }
