--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
@@ -1,140 +1,8 @@
-.btn__icon{
-  width: 12px;
-  height: 12px;
-  margin-right: 4px;
-}
-#refill-qr{
-  display: none;
-}
-.refill{
-  &__title{
-    text-align: center;
-    margin-bottom: 28px;
-  }
-  &__inputs-wrap{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 24px;
-  }
-  &__select{
-    width: 100%;
-    max-width: 230px;
-    margin-bottom: 28px;
-  }
-  
-}
-.modal__note{
-  width: calc(100% + 24px);
-  left: -12px;
-  margin-top: 24px;
-}
-@media (min-width:1200px){
-  #refill-qr{
-    display: block;
-  }
-  .refill{
-    &__title{
-      margin-bottom: 32px;
-    }
-    &__inputs-wrap{
-      flex-direction: row;
-      align-items: center;
-    }
-    &__select{
-      width: 100%;
-      max-width: 240px;
-      margin-bottom: 0;
-      margin-right: 32px;
-    }
-    &__crypto-refill-info{
-      display: flex;
-      //justify-content: center;
-    }
-    &__qr-code{
-      display: block;
-      width: 100%;
-      max-width: 240px;
-      text-align: center;
-      margin-right: 32px;
-      img{
-        max-width: 140px;
-        max-height: 140px;
-      }
-    }
-    &__crypto-address{
-      margin-top: 33px;
-    }
-    &__crypto-memo{
-      margin-top: 24px;
-    }
-    &__crypto-title{
-      margin-bottom: 8px;
-    }
-    &__crypto-hash{
-      margin-bottom: 12px;
-      font-size: 18px;
-      width: 400px;
-      overflow-wrap: break-word;
-      word-wrap: break-word;
-    }
-    &__crypto-copy-btn{
-      margin-bottom: 12px;
-    }
-    &__crypto-comission{
-      font-size: 12px;
-      line-height: 14px;
-    }
-
-  }
-  .btn{
-    max-width: 200px;
-  }
-  .select__list-searching{
-    display: block;
-    min-width: 380px;
-  }
-  .modal__note{
-    width: calc(100% + 64px);
-    left: -32px;
-    margin-top: 32px;
-  }
-}
-//  -------------------
-.select__searching-item {
-  &:hover{
-    background-color: rgba(53, 124, 225, 0.1);
-    span{
-      color: #237BEF;
-    }
-  }
-  span {
-    color: #000;
-  }
-}
-
-.request-errors {
-  color: #EB5757;
-}
-
-.select__search-input {
-  color: #ccc !important;
-}
 perfect-scrollbar{
-  height: 150px;
+	height: 150px;
 }
-
-
-@media(max-width: 1320px) and (min-width:1200px) {
-  .refill__select{
-    min-width: unset;
-    max-width: calc(100% - 200px);
-  }
-  .select__list-searching{
-    min-width: unset;
-  }
-}
-
-.loading-container {
-  margin-top: 40%;
+.refill__inputs-wrap{
+	.btn{
+		margin-bottom: 0;
+	}
 }
