--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups send-instant-s3">
-<div class="title send__title">{{'Make Inner transfer by email' | translate}}</div>
+<h2 class="title send__title">{{'Make Inner transfer by email' | translate}}</h2>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap">
@@ -131,7 +131,7 @@
   </div>
   <button
     class="btn btn--center"
-    [ngClass]="{'btn--empty-blue': !form.valid || pendingCheckEmail}"
+    [disabled]="!form.valid || pendingCheckEmail"
     (click)="submitTransfer()"
   >{{'Transfer' | translate}}</button>
   <div class="send__line"></div>
